option('api', type: 'string', value: 'latest', description: 'The Vulkan API version to generate.')
option('extensions', type: 'array', value: [ 'all' ], description: 'A set of Vulkan extensions to include.')
option('specification', type: 'string', value: 'default',
       description: 'A path indicating the location of the desired Vulkan specification (XML) to generate a loader from. May also be the special value "default" which selects the default specification.')
option('enable_tests', type: 'boolean', value: false, description: 'Whether or not to build tests')
option('enable_examples', type: 'boolean', value: false, description: 'Whether or not to build example programs')
option('enable_extra_defines', type: 'boolean', value: false, description: 'Whether or not to generate extra symbol definitions in vkfl.hpp')
