option('api', type: 'combo', value: 'vulkan', choices: [ 'vulkan', 'vulkansc' ], description: 'The Vulkan API to generate')
option('api_version', type: 'string', value: 'latest', description: 'The Vulkan API version to generate.')
option('extensions', type: 'array', value: [ 'all' ], description: 'A set of Vulkan extensions to include.')
option('specification', type: 'string', value: 'default',
       description: 'A path indicating the location of the desired Vulkan specification. This may also be the special value "default" which selects the default specification.')
option('build_cpp', type: 'feature', value: 'enabled', description: 'Whether or not to build C++ header and source files')
option('build_c', type: 'feature', value: 'enabled', description: 'Whether or not to build C header and source files')
option('build_tests', type: 'feature', value: 'disabled', description: 'Whether or not to build tests')
option('build_examples', type: 'feature', value: 'disabled', description: 'Whether or not to build example programs')
option('generate_disabled_defines', type: 'boolean', value: true, description: 'Whether or not to generate symbol definitions for disabled extensions or APIs in vkfl.hpp and vkfl.h')
