if get_option('enable_examples')
  executable('cpp-basic-use', files('basic_use.cpp'), dependencies: [ vkfl_cpp_dep, vulkan_dep ])
  executable('c-basic-use', files('basic_use.c'), dependencies: [ vkfl_c_dep, vulkan_dep ])
  executable('cpp-global-use', files('global_use.cpp'), dependencies: [ vkfl_cpp_dep, vulkan_dep ])
  executable('c-global-use', files('global_use.c'), dependencies: [ vkfl_c_dep, vulkan_dep ])
endif
