if true
  test_exe = executable('global-function-load', files('test_global.cpp'), dependencies: vkfl_dep)
  test('global-function-load', test_exe)
endif

if true
  test_exe = executable('instance-function-load', files('test_instance.cpp'), dependencies: vkfl_dep)
  test('instance-function-load', test_exe)
endif

if true
  test_exe = executable('device-function-load', files('test_device.cpp'), dependencies: vkfl_dep)
  test('device-function-load', test_exe)
endif

